[package]
name = "media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tokio-tungstenite = "0.18.0"
futures-util = "0.3.19"
anyhow = "1"
bytes = "1"
rml_rtmp = "0.7.0"
simple_logger = "4"
axum = "0.6.1"
log = "0.4.11"
toml = "0.5.10"
http-body = "0.4.5"
ahash = "0.8.6"
